controllers/refresolver/testdata/gatewayapi_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatewayapi-httproute
  namespace: test-gslb
spec:
  parentRefs:
  - name: gatewayapi-gateway
  hostnames:
  - gatewayapi-httproute.cloud.example.com
  rules:
  - backendRefs:
    - name: gatewayapi-httproute-service
      port: 8080
