controllers/refresolver/testdata/gatewayapi_udproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: UDPRoute
metadata:
  name: gatewayapi-udproute
  namespace: test-gslb
spec:
  parentRefs:
  - name: gatewayapi-gateway
  rules:
  - backendRefs:
    - name: gatewayapi-udproute-service
      port: 8080
