controllers/refresolver/testdata/gslb_gatewayapi_grpcroute.yaml
apiVersion: k8gb.io/v1beta1
kind: Gslb
metadata:
  name: gatewayapi-grpcroute
  namespace: test-gslb
spec:
  resourceRef:
    apiVersion: gateway.networking.k8s.io/v1
    kind: GRPCRoute
    name: gatewayapi-grpcroute
  strategy:
    type: roundRobin
    dnsTtlSeconds: 30
