controllers/refresolver/testdata/gslb_gatewayapi_httproute.yaml
apiVersion: k8gb.absa.oss/v1beta1
kind: Gslb
metadata:
  name: gatewayapi-httproute
  namespace: test-gslb
spec:
  resourceRef:
    apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    name: gatewayapi-httproute
  strategy:
    type: roundRobin
    dnsTtlSeconds: 30
