controllers/refresolver/testdata/gslb_gatewayapi_tcproute.yaml
apiVersion: k8gb.io/v1beta1
kind: Gslb
metadata:
  name: gatewayapi-tcproute
  namespace: test-gslb
  annotations:
    k8gb.io/hostname: gatewayapi-tcproute.cloud.example.com
spec:
  resourceRef:
    apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: TCPRoute
    name: gatewayapi-tcproute
  strategy:
    type: roundRobin
    dnsTtlSeconds: 30
