controllers/refresolver/testdata/gslb_gatewayapi_tlsroute.yaml
apiVersion: k8gb.absa.oss/v1beta1
kind: Gslb
metadata:
  name: gatewayapi-tlsroute
  namespace: test-gslb
spec:
  resourceRef:
    apiVersion: gateway.networking.k8s.io/v1alpha3
    kind: TLSRoute
    name: gatewayapi-tlsroute
  strategy:
    type: roundRobin
    dnsTtlSeconds: 30
