controllers/refresolver/testdata/gslb_gatewayapi_tlsroute_v1alpha2.yaml
apiVersion: k8gb.io/v1beta1
kind: Gslb
metadata:
  name: gatewayapi-tlsroute
  namespace: test-gslb
spec:
  resourceRef:
    apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: TLSRoute
    name: gatewayapi-tlsroute
  strategy:
    type: roundRobin
    dnsTtlSeconds: 30
