controllers/refresolver/testdata/gslb_ingress_embedded.yaml
apiVersion: k8gb.absa.oss/v1beta1
kind: Gslb
metadata:
  name: ingress-embedded
  namespace: test-gslb
spec:
  ingress:
    ingressClassName: nginx
    rules:
      - host: ingressembedded.cloud.example.com
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: ingressembedded
                  port:
                    name: http
  strategy:
    type: roundRobin
    splitBrainThresholdSeconds: 300
    dnsTtlSeconds: 30
