controllers/refresolver/testdata/gslb_ingress_referenced.yaml
apiVersion: k8gb.absa.oss/v1beta1
kind: Gslb
metadata:
  name: ingress-referenced
  namespace: test-gslb
spec:
  resourceRef:
    ingress:
      matchLabels:
        app: ingress-referenced
  strategy:
    type: roundRobin
    splitBrainThresholdSeconds: 300
    dnsTtlSeconds: 30
