controllers/refresolver/testdata/gslb_istio.yaml
apiVersion: k8gb.absa.oss/v1beta1
kind: Gslb
metadata:
  name: istio
  namespace: test-gslb
spec:
  resourceRef:
    istioVirtualService:
      matchLabels:
        app: istio
  strategy:
    type: roundRobin
    splitBrainThresholdSeconds: 300
    dnsTtlSeconds: 30
