controllers/refresolver/testdata/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-gslb
  namespace: test-gslb
  labels:
    app: roundrobin
spec:
  ingressClassName: nginx
  rules:
    - host: roundrobin.cloud.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
                name: frontend-podinfo # Gslb should reflect Healthy status and create associated DNS records
                port:
                  name: http
