controllers/refresolver/testdata/ingress_embedded.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-embedded
  namespace: test-gslb
  resourceVersion: "999"
spec:
  ingressClassName: nginx
  rules:
    - host: ingressembedded.cloud.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingressembedded
                port:
                  name: http
status:
  loadBalancer:
    ingress:
      - ip: 10.0.0.1
