controllers/refresolver/testdata/ingress_multiple_servers.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multiple-servers
  namespace: test-gslb
  resourceVersion: "999"
spec:
  ingressClassName: nginx
  rules:
    - host: h1.cloud.example.com
      http:
        paths:
        - path: /malformed
          pathType: Prefix
          backend:
            service:
                name: ""
        - path: /
          pathType: Prefix
          backend:
            service:
                name: s1
                port:
                  name: http
    - host: h2.cloud.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
                name: ss1
                port:
                  name: http
        - path: /debug
          pathType: Prefix
          backend:
            service:
                name: ss2
                port:
                  name: http
