controllers/refresolver/testdata/ingress_referenced.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: referenced
  name: referenced
  namespace: test-gslb
  resourceVersion: "999"
spec:
  ingressClassName: nginx
  rules:
    - host: referenced.cloud.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
                name: referenced
                port:
                  name: http
