controllers/refresolver/testdata/istio_gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - hosts:
        - istio.cloud.example.com
      port:
        name: http
        number: 8080
        protocol: http
