controllers/refresolver/testdata/istio_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-ingress
  labels:
    app: istio-ingressgateway
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: istio-ingressgateway
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: 10.0.0.1
