controllers/refresolver/testdata/istio_virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: istio
  name: istio
  namespace: test-gslb
spec:
  gateways:
    - istio-ingress/istio
  hosts:
    - istio.cloud.example.com
  http:
    - route:
        - destination:
            host: istio
            port:
              number: 80
