controllers/refresolver/testdata/referenced_ingress.yaml
apiVersion: k8gb.absa.oss/v1beta1
kind: Gslb
metadata:
  name: test-gslb
  namespace: test-gslb
spec:
  resourceRef:
    ingress:
      matchLabels:
        app: roundrobin
  ingress:
    ingressClassName: nginx
    rules:
      - host: roundrobin.cloud.example.com
        http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                  name: frontend-podinfo # Gslb should reflect Healthy status and create associated DNS records
                  port:
                    name: http
  strategy:
    type: roundRobin # Use a round robin load balancing strategy, when deciding which downstream clusters to route clients too
    splitBrainThresholdSeconds: 300 # Threshold after which external cluster is filtered out from delegated zone when it doesn't look alive
    dnsTtlSeconds: 30 # TTL value for automatically created DNS records
